# rdma-core

./: .clang-format  .gitignore  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  COPYING.BSD  COPYING.BSD_FB  COPYING.md  ChangeLog  MAINTAINERS  Makefile  Makefile.am  Makefile.in  Makefile.orig  README  README.md  aclocal.m4  acm_notes.txt  acm_opts.cfg  add_fedora_entry.sh  autogen.sh  build-deb.sh  build.sh  buildfile  config.h  config.h.in  config.status  configure  configure.ac  configure.in  dracut_check  dracut_install  dump.c  gen_chlog.sh  gen_ver.sh  hfi.driver  i40iw.driver  ibacm.init.in  (+50 more)
ccan/: CMakeLists.txt  LICENSE.CCO  array_size.h  bitmap.c  bitmap.h  build_assert.h  check_type.h  compiler.h  config.h  container_of.h  ilog.c  ilog.h  list.c  list.h  minmax.h  str.c  str.h  str_debug.h
ibacm/: CMakeLists.txt  Makefile.am  README  acm_notes.txt  configure.ac  dirs  ibacm.init.in  ibacm.service.in  ibacm.socket  ibacm.spec.in
ibacm/include/: acm_mad.h
ibacm/linux/: dlist.h  libacm_linux.c  osd.h
ibacm/man/: ib_acme.1  ibacm.1  ibacm.7  ibacm.8  ibacm_prov.7  ibacm_prov.7.in
ibacm/src/: acm.c  acm_netlink.h  acm_util.c  acm_util.h  acme.c  libacm.c  libacm.h  parse.c
ibacm/windows/: acm_windows.c  acme_windows.c  dirs  libacm_windows.c  osd.h
infiniband-diags/: CMakeLists.txt  dump_fts.c  ibaddr.c  ibcacheedit.c  ibccconfig.c  ibccquery.c  ibdiag_common.c  ibdiag_common.h  ibdiag_dr.c  ibdiag_dr.h  ibdiag_sa.c  ibdiag_sa.h  iblinkinfo.c  ibnetdiscover.c  ibping.c  ibportstate.c  ibqueryerrors.c  ibroute.c  ibsendtrap.c  ibstat.c  ibsysstat.c  ibtracert.c  mcm_rereg_test.c  perfquery.c  saquery.c  sminfo.c  smpdump.c  smpquery.c  vendstat.c
infiniband-diags/etc/: error_thresholds
iwpmd/: AUTHORS  CMakeLists.txt  COPYING  Makefile.am  autogen.sh  configure.ac  iwarp_pm.h  iwarp_pm_common.c  iwarp_pm_helper.c  iwarp_pm_server.c  iwpm_netlink.h  iwpmd.1  iwpmd.1.in  iwpmd.8.in  iwpmd.conf  iwpmd.conf.5  iwpmd.conf.5.in  iwpmd.rules  iwpmd.service  iwpmd.service.in  iwpmd.spec.in  iwpmd_init  iwpmd_init.in  modules-iwpmd.conf
kernel-boot/: CMakeLists.txt  persistent-ipoib.rules  persistent-ipoib.rules.in  rdma-description.rules  rdma-hw-modules.rules  rdma-hw.target.in  rdma-init-kernel.in  rdma-initramfs-tools-hook.in  rdma-load-modules@.service.in  rdma-persistent-naming.rules  rdma-ulp-modules.rules  rdma-umad.rules  rdma.conf  rdma.fixup-mtrr.awk  rdma.kernel-init.in  rdma.mlx4.sys.modprobe.in  rdma.service.in  rdma.udev-ipoib-naming.rules  rdma.udev-rules  rdma_rename.c  rdma_topo
kernel-headers/: CMakeLists.txt  kern-abi.c  update
libhfi1verbs/: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.in  fedora_changelog.txt  hfi1.driver  libhfi1.spec.in  makesrpm.sh
libi40iw/: Makefile.am  configure.ac
libibmad/: CMakeLists.txt  COPYING  Makefile.am  README  bm.c  cc.c  dump.c  ext_umad.c  ext_umad.h  fields.c  gs.c  iba_types.h  libibmad.map  mad.h  portid.c  register.c  rpc.c  sa.c  serv.c  smi_gsi.c  smi_gsi.h  vendor.c
libibnetdisc/: CMakeLists.txt  Makefile.am  chassis.c  ibnetdisc.c  ibnetdisc.h  ibnetdisc_cache.c  ibnetdisc_ext_umad.c  ibnetdisc_ext_umad.h  ibnetdisc_osd.h  internal.h  libibnetdisc.map  libibnetdisc.ver
libibverbs/: AUTHORS  CMakeLists.txt  Makefile.am  all_providers.c  arch.h  autogen.sh  cmd.c  cmd_ah.c  cmd_comp_cntr.c  cmd_counters.c  cmd_cq.c  cmd_device.c  cmd_dm.c  cmd_dmabuf.c  cmd_dmah.c  cmd_fallback.c  cmd_flow.c  cmd_flow_action.c  cmd_ioctl.c  cmd_ioctl.h  cmd_mr.c  cmd_mw.c  cmd_pd.c  cmd_qp.c  cmd_rwq_ind.c  cmd_srq.c  cmd_wq.c  cmd_write.h  cmd_xrcd.c  compat-1_0.c  configure.ac  device.c  dmabuf_heap.c  dmabuf_heap.h  driver.h  dummy_ops.c  dynamic_driver.c  enum_strs.c  ibdev_nl.c  ibverbs.h  (+18 more)
libipathverbs/: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Makefile.am  configure.in  dracut_install  dracut_kmod  truescale-serdes.cmds
libmlx4/: Makefile.am  configure.ac
libnes/: AUTHORS  COPYING  Makefile.am  configure.in  libnes.spec.in  nes.driver
libocrdma/: COPYING  Makefile.am  configure.in  libocrdma.spec.in  ocrdma.driver
librdmacm/: CMakeLists.txt  Makefile.am  README  acm.c  acm.h  addrinfo.c  autogen.sh  cma.c  cma.h  ib.h  librdmacm.map  librspreload.map  preload.c  rdma_cma.h  rdma_cma_abi.h  rsocket.c  rsocket.h
librxe/: CMakeLists.txt  Makefile.am  config.h.in  configure.in  librxe.spec  rxe.driver
pyverbs/: CMakeLists.txt  addr.pxd  addr.pyx  base.pxd  base.pyx  cm_enums.pyx  cmid.pxd  cmid.pyx  comp_cntr.pxd  comp_cntr.pyx  cq.pxd  cq.pyx  device.pxd  device.pyx  dma_util.pyx  dmabuf.pxd  dmabuf.pyx  dmabuf_alloc.c  dmabuf_alloc.h  dmabuf_alloc_stub.c  drm_dmabuf_alloc.c  drm_dmabuf_alloc.h  drm_dmabuf_alloc_stub.c  enums.pyx  flow.pxd  flow.pyx  fork.pyx  habana_dmabuf_alloc.c  habana_dmabuf_alloc.h  habana_dmabuf_alloc_stub.c  libibverbs.pxd  libibverbs_enums.pxd  libibverbs_enums.pyx  librdmacm.pxd  librdmacm_enums.pxd  mem_alloc.pyx  mr.pxd  mr.pyx  pd.pxd  pd.pyx  (+15 more)
rdma-ndd/: CMakeLists.txt  rdma-ndd.8.in  rdma-ndd.8.in.rst  rdma-ndd.c  rdma-ndd.conf  rdma-ndd.rules  rdma-ndd.service.in
src/: Makefile.am  acm.c  acm_mad.h  acm_msg.h  acm_util.c  acm_util.h  acme.c  addrinfo.c  ah.c  at.c  bitmap.h  bm.c  buf.c  cc.c  cm.c  cma.c  cma.h  cmd.c  compat-1_0.c  cq.c  cxgb4-abi.h  cxio_wr.h  dbrec.c  dev.c  device.c  doorbell.h  dump.c  dump_fts.c  enum_strs.c  fields.c  firmware_exports.h  grouping.c  gs.c  hfi-abi.h  hfiverbs.c  hfiverbs.h  hfiverbs.map  i40iw-abi.h  i40iw_uk.c  i40iw_umain.c  (+106 more)
srp_daemon/: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  autogen.sh  build-deb.sh  configure.ac  ibsrpdm.1  logrotate-srp_daemon  modules-srp_daemon.conf  rsyslog-srp_daemon.conf  run_srp_daemon  srp_daemon.1.in  srp_daemon.8.in  srp_daemon.c  srp_daemon.conf  srp_daemon.h  srp_daemon.rules  srp_daemon.rules.in  srp_daemon.service.5  srp_daemon.service.in  srp_daemon.sh  srp_daemon.sh.in  srp_daemon_port@.service.5  srp_daemon_port@.service.in  srp_handle_traps.c  srp_ib_types.h  srp_sync.c  srpd.in  start_on_all_ports  start_on_all_ports.in
(+1886 files in other folders)
